# AgenticAI_POC

./: LICENSE  MNISTDataNN.py  README.md  graph.py  learnTF.py  mnist.py  plotNineGF.py  pyproject.toml  requirment  requirment.txt  seabornGF.py  testCPU.py  tfCNN_MNISTdata.py
Random/: toss.py
chatgpt_quickstart/: basicText.py
googleGemini/: apiTest.py
output/: summary.md
src/config/: agents.yaml  tasks.yaml
src/resume/: agents.py  crew.py  main.py  tasks.py
src/resume_summary_generator/: crew.py  main.py
