[project]
name = "resume"
version = "0.1.0"
description = "resume using crewAI"
authors = [{ name = "Pankaj", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
resume = "resume.main:run"
run_crew = "resume.main:run"
train = "resume.main:train"
replay = "resume.main:replay"
test = "resume.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
